# rai-toolkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REUSE.toml  pyproject.toml
.reuse/templates/: default_template.jinja2
demo/rai_review/: README.md  _common.py  app.py
demo/rai_review/pages/: 1_New_submission.py  2_Inbox.py  3_Review.py
demo_app/: __init__.py  finance_advisor.py  finance_corpus.json  healthcare_scorers.py  redteam_target.py  run_weave_healthcare_demo.py  run_weave_redteam_demo.py  triage_assistant.py  triage_assistant_unsafe.py  triage_corpus.json  triage_corpus_unsafe.json
integrations/: __init__.py
integrations/garak_integration/: __init__.py  adapter.py
integrations/nemo_integration/: __init__.py  nemo_guardrail.py  nemo_scorer.py
integrations/nemo_integration/colang_configs/rai_config/: actions.py  config.yml  rails.co
integrations/pyrit_integration/: __init__.py  adapter.py
integrations/weave_integration/: __init__.py  evaluation.py  feedback.py  models.py  scorers.py  tracing.py  views.py
rai_toolkit/: __init__.py  _tracing.py  cli.py  toolkit.py
rai_toolkit/assessment/: __init__.py  assessor.py  report_view.py
rai_toolkit/compliance/: __init__.py  engine.py  eu_ai_act_mapping.py  frameworks.py  mit_taxonomy.py  nist_mapping.py  scorer_registry.py
rai_toolkit/evaluation/: __init__.py  agentic.py  cost_estimate.py  datasets.py  pipeline.py  report.py  weave_adapter.py
rai_toolkit/examples/: __init__.py  clinical_triage_policy_expectations.json  finqa_sample.json  mit_risk_smoke.json  pii_probes.json  registry.py
rai_toolkit/guardrails/: __init__.py  base.py  guarded_model.py
rai_toolkit/models/: __init__.py  base.py  openai_compatible.py
rai_toolkit/monitoring/: __init__.py  drift_schedule.py
rai_toolkit/policies/: __init__.py  engine.py  expectations.py  schema.py
rai_toolkit/policies/examples/: eu_ai_act_article_15.yaml  fairness_baseline.yaml  healthcare_hipaa.yaml
rai_toolkit/prompts/: __init__.py  judge_prompts.py
rai_toolkit/redteam/: __init__.py  attacks.py  runner.py
rai_toolkit/scorers/: __init__.py  base.py  composite.py  llm_judges.py  normalizer.py  programmatic.py
rai_toolkit/workflow/: __init__.py  profile.py  registry.py  scoping.py  submission.py
